# mad-libs

./: app.py  pyproject.toml
templates/: home.html  story.html
