[tool.poetry]
name = "22-2jinja"
version = "1"
description = "flask-madlibs"
authors = ["AJ <skyhighzed@gmail.com>"]
readme = "README.md"
packages = [{include = "22"}]

[tool.poetry.dependencies]
python = "^3.10"
blinker = "1.8.2"
click = "8.1.7"
Flask = "3.0.3"
Flask-DebugToolbar = "0.15.1"
itsdangerous = "2.2.0"
Jinja2 = "3.1.4"
MarkupSafe = "2.1.5"
packaging = "24.1"
Werkzeug = "3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
